[package]
name = "mira"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
pico-args = "0.4.2"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.7"